Improve the template: add headers, bodies, single retcodes,

--- a/tests.jinja2
+++ b/tests.jinja2
@@ -1,3 +1,33 @@
+{#
+Django REST framework tests generator which is based on API Blueprint
+(https://apiblueprint.org/) documents.
+Released under New BSD License.
+
+Copyright © 2015, Vadim Markovtsev :: AO InvestGroup
+All rights reserved.
+
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided that the following conditions are met:
+    * Redistributions of source code must retain the above copyright
+      notice, this list of conditions and the following disclaimer.
+    * Redistributions in binary form must reproduce the above copyright
+      notice, this list of conditions and the following disclaimer in the
+      documentation and/or other materials provided with the distribution.
+    * Neither the name of the AO InvestGroup nor the
+      names of its contributors may be used to endorse or promote products
+      derived from this software without specific prior written permission.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+DISCLAIMED. IN NO EVENT SHALL VADIM MARKOVTSEV BE LIABLE FOR ANY
+DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#}
 # -*- coding: utf-8 -*-
 from django.core.urlresolvers import resolve
 
@@ -56,9 +86,19 @@ class {{ resource.name | symbolize }}Tests({{ class_base }}):
         print("%s.%s: %d requests" % (
             url.func.cls.__module__, url.func.cls.__name__, {{ action | length }}))
                 {% for request, responses in action %}
-        response = self.client.get("{{ action.uri }}", format="{{ request.media_type[1] }}")
+                    {% if request.body is not none %}
+        body = {{ request.value() | pprint }}
+                    {% endif %}
+                    {% if request.headers is not none %}
+        headers = {{ dict(request.headers) | pprint }}
+                    {% endif %}
+        response = self.client.{{ action.request_method | lower }}("{{ action.uri }}"{% if request.body is not none %}, body{% endif %}{% if request.media_type[1] %}, format="{{ request.media_type[1] }}"{% endif %}{% if request.headers is not none %}, **headers{% endif %})
         try:
+                    {% if responses | length > 1 %}
              self.assertIn(response.code, ({% for r in responses %}{{ r }},{% endfor %}))
+                    {% else %}
+             self.assertEqual(response.code, {{ responses | first }})
+                    {% endif %}
         except AssertionError as e:
              print(response)
              raise from_none(e)
